<resources>
    <string name="app_name">CamScanner mini</string>
    <string name="local_database_name">scanner-database</string>
    <string name="new_document">New Document</string>
    <string name="enter_document_name">Document Name</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="item_document_thumbnail_image_view_description">thumbnail</string>
    <string name="close_image_view_description">close_camera</string>
    <string name="recent_image_view_description">recent_images</string>
    <string name="take_photo_image_view_description">take_photo</string>
    <string name="item_page_image_view_description">page</string>
    <string name="camera_sound_image_button_description">sound</string>
    <string name="camera_flash_image_button_description">flash</string>
    <string name="camera_grid_image_button_description">grid</string>
    <string name="next_image_description">next</string>
    <string name="delete">Delete</string>
    <string name="retake">Retake</string>
    <string name="rotate">Rotate</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="item_page2_image_view_description">page_image</string>
    <string name="edit_image2_image_view_description">edit_image</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="auto_crop">Auto Crop</string>
    <string name="filters">Filters</string>
    <string name="tune">Tune</string>
    <string name="reset">Reset</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="item_filter_image_view_desription">filter_image</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="creation_time_newest_first">Creation Time (Newest first)</string>
    <string name="creation_time_newest_last">Creation Time (Newest Last)</string>
    <string name="modified_time_newest_first">Modified Time (Newest first)</string>
    <string name="modified_time_newest_last">Modified Time (Newest Last)</string>
    <string name="document_name_a2z">Doc Name (A-Z)</string>
    <string name="document_name_z2a">Doc Name (Z-A)</string>
    <string name="doc_name">Doc Name</string>
    <string name="rename">Rename</string>
    <string name="import_from_gallery">Import From Gallery</string>
    <string name="pdf">PDF</string>
    <string name="multi_select">Select Multiple</string>
    <string name="manual_sorting">Manual Sorting</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">DeSelect All</string>
    <string name="jpeg">jpeg</string>
    <string name="pdf_small">pdf</string>
    <string name="long_image">long image</string>
    <string name="share_prefix">Share as</string>
    <string name="save_prefix">Save as</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splash_screen_image_description">logo</string>
    <string name="item_pdf_image_view_description">pdf_image</string>
</resources>
