<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cam.scanner.mini.PagesActivity2">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pages2_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp">
        <Button
            android:id="@+id/pages2_back_button"
            android:drawableTop="@drawable/ic_back"
            android:text="@string/back"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/pages2_retake_button"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/retake"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/pages2_save_button"
            android:drawableTop="@drawable/ic_save"
            android:text="@string/save"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/pages2_share_button"
            android:drawableTop="@drawable/ic_share"
            android:text="@string/share"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/pages2_edit_button"
            android:drawableTop="@drawable/ic_edit"
            android:text="@string/edit"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/pages2_delete_button"
            android:drawableTop="@drawable/ic_delete"
            android:text="@string/delete"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
    </LinearLayout>

</LinearLayout>