<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/black"
    tools:context="cam.scanner.mini.CapturedImagesActivity">

    <cam.scanner.mini.components.LockableViewPager
        android:id="@+id/captured_images_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp">
        <Button
            android:id="@+id/captured_images_delete_button"
            android:drawableTop="@drawable/ic_delete"
            android:text="@string/delete"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/captured_images_retake_button"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/retake"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/captured_images_rotate_ac_button"
            android:drawableTop="@drawable/ic_rotate_anti_clockwise"
            android:text="@string/left"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/captured_images_rotate_c_button"
            android:drawableTop="@drawable/ic_rotate_clockwise"
            android:text="@string/right"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/captured_images_remove_crop_button"
            android:drawableTop="@drawable/ic_crop_free"
            android:text="@string/all"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/captured_images_done_button"
            android:drawableTop="@drawable/ic_done"
            android:text="@string/done"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
    </LinearLayout>

</LinearLayout>