<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cam.scanner.mini.EditImageActivity1">

    <FrameLayout
        android:id="@+id/edit_image1_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <cam.scanner.mini.components.CropableImageView
            android:id="@+id/edit_image1_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:padding="20dp"/>
        <ProgressBar
            android:id="@+id/edit_image1_progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:theme="@style/ProgressBarTheme"
            style="@style/ProgressBarStyleLarge"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp">
        <Button
            android:id="@+id/edit_image1_back_button"
            android:drawableTop="@drawable/ic_back"
            android:text="@string/back"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image1_rotate_ac_button"
            android:drawableTop="@drawable/ic_rotate_anti_clockwise"
            android:text="@string/left"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image1_rotate_c_button"
            android:drawableTop="@drawable/ic_rotate_clockwise"
            android:text="@string/right"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image1_auto_crop_button"
            android:drawableTop="@drawable/ic_auto_crop"
            android:text="@string/auto_crop"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image1_remove_crop_button"
            android:drawableTop="@drawable/ic_crop_free"
            android:text="@string/all"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image1_next_button"
            android:drawableTop="@drawable/ic_next"
            android:text="@string/next"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
    </LinearLayout>
</LinearLayout>