<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cam.scanner.mini.EditImageActivity2">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/edit_image2_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:contentDescription="@string/edit_image2_image_view_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_image2_bottom_layout"/>

    <LinearLayout
        android:id="@+id/edit_image2_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/edit_image2_back_button"
            android:drawableTop="@drawable/ic_back"
            android:text="@string/back"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image2_rotate_button"
            android:drawableTop="@drawable/ic_rotate_anti_clockwise"
            android:text="@string/rotate"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image2_filter_button"
            android:drawableTop="@drawable/ic_filter"
            android:text="@string/filters"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image2_tune_button"
            android:drawableTop="@drawable/ic_tune"
            android:text="@string/tune"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
        <Button
            android:id="@+id/edit_image2_save_button"
            android:drawableTop="@drawable/ic_done"
            android:text="@string/save"
            android:onClick="onClick"
            style="@style/ImagesBottomLayoutIconsStyle"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_image2_filters_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dilutedBlackColor"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/edit_image2_bottom_layout" />

    <RelativeLayout
        android:id="@+id/edit_image2_tuning_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dilutedBlackColor"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/edit_image2_bottom_layout">

        <Button
            android:id="@+id/edit_image2_reset_button"
            android:drawableTop="@drawable/ic_reset"
            android:text="@string/reset"
            android:onClick="onClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            style="@style/TuningIconsStyle"/>

        <Button
            android:id="@+id/edit_image2_brightness_button"
            android:drawableTop="@drawable/ic_brightness"
            android:text="@string/brightness"
            android:layout_alignParentStart="true"
            android:layout_below="@id/edit_image2_reset_button"
            style="@style/TuningIconsStyle"/>

        <Button
            android:id="@+id/edit_image2_contrast_button"
            android:drawableTop="@drawable/ic_contrast"
            android:text="@string/contrast"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/edit_image2_brightness_button"
            style="@style/TuningIconsStyle"/>

        <SeekBar
            android:id="@+id/edit_image2_brightness_seek_bar"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:max="100"
            android:progress="50"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/edit_image2_brightness_button"
            android:layout_alignTop="@id/edit_image2_brightness_button"/>

        <SeekBar
            android:id="@+id/edit_image2_contrast_seek_bar"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:max="100"
            android:progress="50"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/edit_image2_contrast_button"
            android:layout_alignTop="@id/edit_image2_contrast_button"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>