<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/dialog_rename_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:backgroundTint="@color/greyColor"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/doc_name"
        android:hint="@string/doc_name"/>

    <Button
        android:id="@+id/dialog_rename_cancel_button"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rename_edit_text"
        style="@style/DialogButtonsStyle" />

    <Button
        android:id="@+id/dialog_rename_ok_button"
        android:layout_marginTop="16dp"
        android:text="@string/okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rename_edit_text"
        style="@style/DialogButtonsStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
