<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="cam.scanner.mini.CameraActivity">
    <LinearLayout
        android:id="@+id/camera_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/camera_sound_image_button"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ic_sound"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camera_sound_image_button_description" />

        <ImageButton
            android:id="@+id/camera_flash_image_button"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ic_flash_off"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camera_flash_image_button_description" />

        <ImageButton
            android:id="@+id/camera_grid_image_button"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ic_grid"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camera_grid_image_button_description" />
    </LinearLayout>

    <cam.scanner.mini.components.AutoResizableFrameLayout
        android:id="@+id/camera_middle_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center">
        <cam.scanner.mini.components.AutoResizableTextureView
            android:id="@+id/camera_texture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/camera_progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:theme="@style/ProgressBarTheme"
            style="@style/ProgressBarStyleLarge"/>
    </cam.scanner.mini.components.AutoResizableFrameLayout>

    <RelativeLayout
        android:id="@+id/camera_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/camera_close_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close"
            android:onClick="onClick"
            android:contentDescription="@string/close_image_view_description"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/camera_take_photo_image_view"/>

        <ImageView
            android:id="@+id/camera_take_photo_image_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:onClick="onClick"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/take_photo_image_view_description"
            android:layout_centerInParent="true"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/camera_recent_images_outer_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/camera_take_photo_image_view"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/camera_recent_images_inner_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:onClick="onClick">
                <ImageView
                    android:id="@+id/camera_recent_image_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/recent_image_view_description" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right"
                    android:layout_gravity="center"
                    android:contentDescription="@string/next_image_description"/>
            </LinearLayout>

            <TextView
                android:id="@+id/camera_recent_images_count_text_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:background="@drawable/badge_background"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textAlignment="center"
                android:padding="4dp"
                app:layout_anchor="@id/camera_recent_image_view"
                app:layout_anchorGravity="top|end"
                android:layout_marginTop="-12dp"
                android:layout_marginEnd="-12dp"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>
</LinearLayout>
